--- a/com.godrejagrovet.FarmerApp/test-output/index.html
+++ b/com.godrejagrovet.FarmerApp/test-output/index.html
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Default_suite" class="navigator-link ">
-                    <span>C:\Users\testing.engineer\AppData\Local\Temp\testng-eclipse--1837891806\testng-customsuite.xml</span>
+                    <span>C:\Users\testing.engineer\AppData\Local\Temp\testng-eclipse-83500210\testng-customsuite.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -103,7 +103,7 @@
                     <div class="method-list-content passed suite-Default_suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Default_suite" title="languageSelection.verifyLanguageTest" class="method navigator-link" hash-for-method="VerifyThatTheLanguageSelectionScreenLoadsProperly">VerifyThatTheLanguageSelectionScreenLoadsProperly</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Default_suite" title="languageSelection.verifyBillMilkFunctionality" class="method navigator-link" hash-for-method="selectDateRange">selectDateRange</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Default_suite -->
@@ -121,14 +121,14 @@
           <div class="suite-Default_suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
-              <span class="class-name">languageSelection.verifyLanguageTest</span>
+              <span class="class-name">languageSelection.verifyBillMilkFunctionality</span>
             </div> <!-- main-panel-header rounded-window-top -->
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="VerifyThatTheLanguageSelectionScreenLoadsProperly">
-                  </a> <!-- VerifyThatTheLanguageSelectionScreenLoadsProperly -->
-                  <span class="method-name">VerifyThatTheLanguageSelectionScreenLoadsProperly</span>
+                  <a name="selectDateRange">
+                  </a> <!-- selectDateRange -->
+                  <span class="method-name">selectDateRange</span>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -136,7 +136,7 @@
         </div> <!-- panel Default_suite -->
         <div panel-name="test-xml-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\testing.engineer\AppData\Local\Temp\testng-eclipse--1837891806\testng-customsuite.xml</span>
+            <span class="header-content">C:\Users\testing.engineer\AppData\Local\Temp\testng-eclipse-83500210\testng-customsuite.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -145,11 +145,11 @@
 &lt;suite name=&quot;Default suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Default test&quot; verbose=&quot;2&quot;&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;languageSelection.verifyLanguageTest&quot;&gt;
+      &lt;class name=&quot;languageSelection.verifyBillMilkFunctionality&quot;&gt;
         &lt;methods&gt;
-          &lt;include name=&quot;VerifyThatTheLanguageSelectionScreenLoadsProperly&quot;/&gt;
+          &lt;include name=&quot;selectDateRange&quot;/&gt;
         &lt;/methods&gt;
-      &lt;/class&gt; &lt;!-- languageSelection.verifyLanguageTest --&gt;
+      &lt;/class&gt; &lt;!-- languageSelection.verifyBillMilkFunctionality --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Default test --&gt;
 &lt;/suite&gt; &lt;!-- Default suite --&gt;
@@ -191,14 +191,14 @@ data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
 data.addRows(1);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'VerifyThatTheLanguageSelectionScreenLoadsProperly')
-data.setCell(0, 2, 'languageSelection.verifyLanguageTest')
-data.setCell(0, 3, 11699);
+data.setCell(0, 1, 'selectDateRange')
+data.setCell(0, 2, 'languageSelection.verifyBillMilkFunctionality')
+data.setCell(0, 3, 9663);
 window.suiteTableData['Default_suite']= { tableData: data, tableDiv: 'times-div-Default_suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 11 seconds</span>
+              <span class="suite-total-time">Total running time: 9 seconds</span>
               <div id="times-div-Default_suite">
               </div> <!-- times-div-Default_suite -->
             </div> <!-- times-div -->
@@ -213,16 +213,9 @@ return data;
         </div> <!-- panel -->
         <div panel-name="ignored-methods-Default_suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">1 ignored method</span>
+            <span class="header-content">0 ignored methods</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
-            <div class="ignored-class-div">
-              <span class="ignored-class-name">languageSelection.verifyLanguageTest</span>
-              <div class="ignored-methods-div">
-                <span class="ignored-method-name">VerifyThatUserCanSelectHindi</span>
-                <br/>
-              </div> <!-- ignored-methods-div -->
-            </div> <!-- ignored-class-div -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
         <div panel-name="chronological-Default_suite" class="panel">
@@ -231,14 +224,14 @@ return data;
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <div class="chronological-class">
-              <div class="chronological-class-name">languageSelection.verifyLanguageTest</div> <!-- chronological-class-name -->
+              <div class="chronological-class-name">languageSelection.verifyBillMilkFunctionality</div> <!-- chronological-class-name -->
               <div class="configuration-method before">
                 <span class="method-name">startApp</span>
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">VerifyThatTheLanguageSelectionScreenLoadsProperly</span>
-                <span class="method-start">18420 ms</span>
+                <span class="method-name">selectDateRange</span>
+                <span class="method-start">23415 ms</span>
               </div> <!-- test-method -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
